--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(generate_boxplots)
 export(plot_manhattan_binary)
 export(plot_manhattan_quantitative)
+export(plot_path_length_dotplot)
 export(plot_pvalue_hist_binary)
 export(plot_pvalue_hist_quantitave)
 export(qq_plot_binary)
